apps/gotify/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  annotations:
    cert-manager.io/cluster-issuer: ""
spec:
  ingressClassName: ""
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 80
  tls:
    - hosts:
        - ""
      secretName: gotify-tls-ingress
